--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "mariia shevchenko project for Fanshawe",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/myselfmarish/av-project#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "videojs": "^1.0.0"
   }
 }
